# chaos-assistant

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  devcontainer.yaml  python.yaml
chaos_assistant/: __init__.py  __main__.py  cli.py
chaos_assistant/models/: common.py  file.py  internal.py  user.py
chaos_assistant/models/schemas/: category.schema.json  labels.schema.json  task.schema.json
examples/: category.yaml  labels.yaml  task-test.yaml  task-test1.yaml
examples/sub1/: category.yaml  labels.yaml  task-test2.yaml  task-test3.yaml
tests/: __init__.py  model_test.py
